tests/NormalTests/paczka1/fuzzy1/61955719.err
Error in line 1: A856 S180 60,8
Error in line 14: NbeI S180 89,8
Error in line 30: NbeI S415 0,6
Error in line 31: NbeI S428 69,0
